# vibeco

./: .gitignore  CLAUDE.md  FUTURE-RUNTIME-PLAN.md  MODEL-ROUTING.md  MODEL-SELECTION.md  STRATEGIST-PERSONA.md  VCO-ARCHITECTURE.md  agent-types.yaml  model-routing.yaml  pyproject.toml  vco-runner.sh
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v2.0-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md  v2.1-scope.md  v3.0-MILESTONE-AUDIT.md  v3.0-cli-first-rewrite.md  v4.0-MILESTONE-AUDIT.md
docker/: Dockerfile  settings.json
tests/: conftest.py  test_agent_handle.py  test_agent_state.py  test_alerts_cog.py  test_ask_discord.py  test_attribution.py  test_backlog.py  test_bot_client.py  test_bot_config.py  test_bot_startup.py  test_bulk_failure.py  test_channel_protocol.py  test_channel_setup.py  test_checkin.py  test_child_spec.py  test_cli_commands.py  test_clone_cmd.py  test_comm_port_wiring.py  test_commands_cog.py  test_communication_port.py  test_company_agent.py  test_company_root.py  test_confidence.py  test_config.py  test_confirm_view.py  test_conflict_resolver.py  test_container_blocked.py  test_container_context.py  test_container_factory.py  test_container_health.py  test_container_integration.py  test_container_lifecycle.py  test_container_stopping.py  test_container_tmux_bridge.py  test_context_builder.py  test_continuous_agent.py  test_continuous_lifecycle.py  test_conversation.py  test_coordination.py  test_crash_tracker.py  (+65 more)
tools/: ask_discord.py  discord_clean.py  discord_send.py  patch_gsd_workflows.py
(+649 files in other folders)
